--- a/LoopExcersize_6421/LoopExcersize_6421.csproj
+++ b/LoopExcersize_6421/LoopExcersize_6421.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{F2B55B40-C7B9-4361-9A31-E8A382641B26}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LoopLab</RootNamespace>
-    <AssemblyName>LoopLab</AssemblyName>
+    <RootNamespace>IntroCS</RootNamespace>
+    <AssemblyName>LoopExcersize_6421</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LoopLab.cs" />
+    <Compile Include="LoopExcersize_6421.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
