--- a/StrangeSequenceExercise/StrangeSequenceExercise.csproj
+++ b/StrangeSequenceExercise/StrangeSequenceExercise.csproj
@@ -47,6 +47,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ui\ui.csproj">
+      <Project>{2262ce21-c5ad-4ede-b384-ec2bd91585e6}</Project>
+      <Name>ui</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
