--- a/LoanTableExercise/LoanTableExercise.csproj
+++ b/LoanTableExercise/LoanTableExercise.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6A8429ED-4677-4F87-9DE8-A9EED72ECDBF}</ProjectGuid>
+    <ProjectGuid>{92D731BF-1391-430C-9685-3400A516BCA1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IntroCS</RootNamespace>
-    <AssemblyName>Brute-Force GCD Exercise</AssemblyName>
+    <AssemblyName>LoanTableExercise</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,14 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BruteForceGCDExercise.cs" />
+    <Compile Include="loan_calc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ui\ui.csproj">
