change old assembly name

--- a/DuplicateCharExercise/DuplicateCharExercise_unfinished.csproj
+++ b/DuplicateCharExercise/DuplicateCharExercise_unfinished.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IntroCS</RootNamespace>
-    <AssemblyName>LoopExcersize_6421</AssemblyName>
+    <AssemblyName>DuplicateCharExcercise</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
