--- a/SafeSumFileExercise/SafeSumFileExercise.csproj
+++ b/SafeSumFileExercise/SafeSumFileExercise.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{8F166A25-209F-4CA8-BC22-CD08047291C5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SafeSumFileExercise</RootNamespace>
+    <RootNamespace>IntroCS</RootNamespace>
     <AssemblyName>SafeSumFileExercise</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
