--- a/Hmwk3/Hmwk3.csproj
+++ b/Hmwk3/Hmwk3.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Grade_File.cs" />
     <Compile Include="hmwk3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
