--- a/BookList/Hmwk4_BookList.csproj
+++ b/BookList/Hmwk4_BookList.csproj
@@ -45,7 +45,7 @@
     <Compile Include="book_list.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="text_book_list.cs" />
+    <Compile Include="%28program%29text_book_list.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
