--- a/Hmwk4BookList/Hmwk4_BookList.csproj
+++ b/Hmwk4BookList/Hmwk4_BookList.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{90E6AA51-42D0-4B6E-8DBF-9C2BD88B9B68}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BookList</RootNamespace>
+    <RootNamespace>IntroCS</RootNamespace>
     <AssemblyName>BookList</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
